1.2.36:
	- fix unresponsive taskbar when PassFirstClickToClient=0
	- add support for sysfs interface (instead of proc) for battery 
          status (initial code by Santiago Garcia Mantinan)
	- fix maximized window repositioning on fullscreen toggle

1.2.35: 2008-01-05
	- Application tray bug fixes
        - Add encoding/language to about dialog

1.2.34: 2007-12-27
	- fix gmplayer switching to fullscreen
	- popup dialog focus fixes
	- fix screen change with xrandr 1.2

1.2.33: 2007-11-04
	- build fixes (Bert Wesarg)
	- fix FocusOnRaise
	- tray fixes
	- fix taskbar popup in fullscreen mode

1.2.32: 2007-08-07
	- fix session shutdown when logging out (Stanislav Maslovski)
	- tweaks to taskbar auto-hide in fullscreen mode

1.2.31: 2007-07-27
	- auto-hide like taskbar activation in full screen mode
	- fix raise/lower of windows of java6 apps
	- fix iconic app startup

1.2.31pre1: 2007-05-20
	- fix crash when using battery status applet without ACPI (flitsch)
	- fix CPU status applet with long uptime
	- zh_CN translation update (LI Daobing)
	- zh_TW translation update (Wei-Lun Chao)
	- added missing ShowSettingsMenu and ShowFocusModeMenu 
          settings (Evgenii Terechkov)
	- Czech translation update
	- cross compilation fix (Lucas Correia Villa Real)
	- fix --enable-lite + --enable-gradients (Lucas Correia Villa Real)
	- binding to raise window with mouse (MouseWinRaise=Ctrl+Alt+Mouse1)  (Thomas Holder)
        - Russian translation update (Evgenii Terechkov)

1.2.30: 2006-12-24
	- battery status cleanups
	- new option BatteryPollingPeriod (default 10 seconds)

1.2.30pre1: 2006-12-17
	- fix focus after minimizing all windows
        - moved Themes selection to Settings menu
	- added Settings -> Focus menu (config saved to ~/.icewm/focus_mode 
          as FocusMode=1,2 or 0)
	- startMinimized window option fixed
	- new setting MapInactiveOnTop (default 1)
	- new setting RequestFocusOnAppRaise (when FocusOnAppRaise=0)

1.2.29: 2006-12-03